# how_old_am_i

./: .gitignore  Cargo.toml  README.md
data/: days-to-months.json  presidents.json
src/: cli.rs  dates.rs  lib.rs  main.rs  read_json.rs
src/dates/: age_in.rs  mod.rs
