[package]
name = "how_old_am_i"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "read_json"
path = "src/read_json.rs"

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
